cabal-version:   3.4
name:            dev-launcher
version:         0.1.0.0
synopsis:        Development environment launcher for managing multiple projects
description:     A CLI tool to register, launch, and manage multiple development projects.
                 Supports port management and process control.
license:         MIT
license-file:    LICENSE
author:          infixer
maintainer:      ryokatsu0719@gmail.com
category:        Development
build-type:      Simple
extra-doc-files: README.md

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-deriving-strategies
                 -Wpartial-fields -Wredundant-constraints -Wunused-packages
                 -threaded -rtsopts -with-rtsopts=-N

executable dev-launcher
    import:           warnings
    main-is:          Main.hs
    other-modules:    Types
                    , Config
                    , Process
                    , Tui
    build-depends:    base ^>=4.19 || ^>=4.20
                    , aeson
                    , yaml
                    , directory
                    , filepath
                    , process
                    , brick
                    , vty
                    , vty-crossplatform
                    , microlens
                    , microlens-mtl
                    , microlens-th
                    , async
                    , text
                    , unix
    hs-source-dirs:   app
    default-language: GHC2021
